<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task2Activity">

    <TextView
        android:id="@+id/numberOne"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="247dp"
        android:layout_marginBottom="146dp"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberTwo"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="100dp"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="@id/numberOne"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answerText"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:text="@string/Answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOne" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="answer"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerText" />

    <TextView
        android:id="@+id/upperLimitText"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:text="@string/UpperLimit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />


    <EditText
        android:id="@+id/upperlimit"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="upper limit"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperLimitText" />

    <Button
        android:id="@+id/button_adder"
        android:layout_width="236dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAdder"
        android:text="@string/adder"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperlimit" />

    <Button
        android:id="@+id/button_multiplicator"
        android:layout_width="236dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="245dp"
        android:onClick="onClickMultiplicatior"
        android:text="@string/multipliser"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_adder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>